set database
