# src/docs/swagger.yaml
@@ -473,9 +473,15 @@ definitions:
         description: "Уникальный индекс для email\tPassword           string              `gorm:\"not
           null\" json:\"-\"`"
         type: string
+      groups:
+        items:
+          $ref: '#/definitions/model.UserGroup'
+        type: array
       id:
         type: string
       name:
+        type: string
+      password:
         type: string
       project_permissions:
         items:
@@ -496,13 +502,18 @@ definitions:
       verified_email:
         type: boolean
       work_time:
-        type: string
+        type: integer
     type: object
   model.UserGroup:
     properties:
       created_at:
         type: string
       id:
+        type: string
+      owner:
+        $ref: '#/definitions/model.User'
+      owner_id:
+        description: Автор группы
         type: string
       projects:
         items:
@@ -673,14 +684,14 @@ definitions:
     type: object
   validation.AddUserToGroup:
     properties:
-      group_id:
+      user_group_id:
         example: 550e8400-e29b-41d4-a716-446655440000
         type: string
       user_id:
         example: 550e8400-e29b-41d4-a716-446655440000
         type: string
     required:
-    - group_id
+    - user_group_id
     - user_id
     type: object
   validation.CreateGroup:
@@ -1327,7 +1338,7 @@ paths:
       tags:
       - UserGroups
   /user-groups/users:
-    get:
+    post:
       consumes:
       - application/json
       description: Retrieve a list of users in a specific group.
